--- a/federaltimeline/css/style.css
+++ b/federaltimeline/css/style.css
@@ -1,106 +1,177 @@
-#hello {
-	color: red;
+/*app-navigation*/
+
+#app-navigation li {
+	text-align: center;
+}
+
+#instance-filter {
+	width: calc(100% - 1em);
+	position: relative;
+}
+
+/*app-content*/
+
+#tlUpload {
+	position: relative;
+	padding: 0.5em;
+}
+
+#tlUpload::after {
+	content: " ";
+	display: block;
+	position: relative;
+	left: -0.5em;
+	top: 0.5em;
+	width: calc(100% + 1em);
+	height: 1px;
+	background-color: #eee;
+}
+
+#tlUpload input[type="file"] {
+	margin: 3px 3px 3px 0;
+}
+
+#untagged-list {
+	overflow: auto;
+	max-height: 0;
+
+	transition: max-height 0.5s ease;
+	visibility: hidden;
+}
+
+#untagged-list.show {
+	padding: 0.5em;
+	max-height: 20em;
+	visibility: visible;
+}
+
+#untagged-list .file {
+	margin: 3px 3px 3px 0;
 }
 
 #timeline {
 	position: relative;
+	margin: 0.5em;
+}
+
+#timeline::before {
+	content: " ";
+	display: block;
+	position: relative;
+	left: -0.5em;
+	top: -0.5em;
+	height: 3px;
+	width: calc(100% + 1em);
+	background-image: linear-gradient(to top, transparent, #eee);
 }
 
 #timeline > .line {
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 0.2em;
+	width: 0.3em;
 	height: 100%;
-	background-color: green;
+	background-color: antiquewhite;
 }
 
 #timeline > .date-instance {
 	position: relative;
+	white-space: nowrap;
 }
 
-.date {
+#timeline > .date-instance.filtered .date,
+#timeline > .date-instance.filtered .instance {
+	color: darkorchid;
+}
+
+#timeline .date {
 	display: inline-block;
 	position: relative;
 	margin-left: 1.2em;
 	padding: 0.1em;
 	border-radius: 0.4em;
-	background-color: white;
+	background-color: antiquewhite;
 	text-align: center;
 }
 
-.date::before {
+#timeline .date::before {
 	content: " ";
 	position: absolute;
 	width: 1.2em;
-	height: 0.2em;
+	height: 0.3em;
 	right: 100%;
-	bottom: calc(50% - 0.2em / 2);
-	background-color: green;
+	bottom: calc(50% - 0.3em / 2);
+	background-color: antiquewhite;
 }
 
-.instance {
+#timeline .instance {
     display: inline-block;
     position: relative;
     margin-left: 0.5em;
     padding: 0.1em 0.2em;
     border-radius: 0.4em;
-    background-color: white;
+    background-color: moccasin;
 }
 
-.instance::before {
+#timeline .instance::before {
 	content: " ";
 	position: absolute;
 	width: 0.5em;
-	height: 0.2em;
+	height: 0.3em;
 	right: 100%;
-	bottom: calc(50% - 0.2em / 2);
-	background-color: white;
+	bottom: calc(50% - 0.3em / 2);
+	background-color: moccasin;
 }
 
-.files {
+#timeline .files {
 	display: inline-block;
 	position: relative;
+	max-width: 70%;
     margin-left: 0.5em;
     vertical-align: top;
-	max-width: 60%;
+    white-space: normal;
 }
 
-.files::before {
+#timeline .files::before {
 	content: " ";
 	position: absolute;
 	width: 0.5em;
-	height: 0.2em;
+	height: 0.3em;
 	right: 100%;
-	top: 0.6em;
-	background-color: white;
+	top: 0.8em;
+	background-color: peachpuff;
 }
 
-.files-flex {
+#timeline .files-flex {
     display: inline-flex;
     flex-flow: row wrap;
     overflow: hidden;
     border-radius: 0.4em;
-    background-color: white;
+    background-color: peachpuff;
 }
 
-.files-flex > * {
+#timeline .files-flex > * {
 	display: inline-block;
     padding: 0.1em 0.2em;
 }
 
-.files-flex > form {
+#timeline .files-flex > form {
 	padding: 0;
 }
 
-.files-flex button, .files-flex input {
+#timeline .files-flex button, .files-flex input {
 	padding: 0;
 	background-color: white;
 	color: black;
 	border-radius: 0 0.4em 0.4em 0;
 }
 
-a {
+a > i {
+	display: inline-block;
+	vertical-align: text-top;
+}
+
+#timeline a {
 	color: inherit; /* blue colors for links too */
 	text-decoration: inherit; /* no underline */
 }
